add vertical scroll layout

--- a/app/src/main/res/layout/child_item.xml
+++ b/app/src/main/res/layout/child_item.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <TextView
+        android:textColor="@color/calling_number_color"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
@@ -12,6 +13,7 @@
         tools:text="1号"
         android:gravity="center"/>
     <TextView
+        android:textColor="@color/calling_number_color"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
@@ -19,6 +21,7 @@
         tools:text="XXX"
         android:gravity="center"/>
     <TextView
+        android:textColor="@color/calling_number_color"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
