--- a/app/src/main/res/layout/intelligent_room.xml
+++ b/app/src/main/res/layout/intelligent_room.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge>
 <LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/each_room_content_width"
@@ -15,11 +16,11 @@
         android:layout_weight="2"
         android:gravity="center"
         android:text="测量室119室"
-        android:background="@drawable/red_label"/>
+        android:background="@drawable/red_label"
+        android:textAppearance="@android:style/TextAppearance.Material.Headline"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/intelligent_room_waiting_list"
         android:layout_marginTop="@dimen/content_calling_number_margin_top"
-        android:textColor="@color/calling_number_color"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
@@ -38,15 +39,16 @@
             android:paddingTop="@dimen/passed_number_label_top_padding"
             android:paddingLeft="@dimen/passed_number_label_left_padding"
             android:text="过号"/>
-        <ListView
-            android:transcriptMode="alwaysScroll"
-            android:stackFromBottom="true"
+        <com.example.listeningroom.VerticalScrollLayout
+            app:vsl_isCusDuration="true"
+            app:vsl_sleepTime="2000"
+            app:vsl_animDuration="1000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="@dimen/passed_list_top_margin"
             android:id="@+id/intelligent_room_passed_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/passed_number_color"
-            android:text="1号 XXX 过号" />
+            android:textColor="@color/passed_number_color">
+        </com.example.listeningroom.VerticalScrollLayout>
     </RelativeLayout>
 </LinearLayout>
 </merge>
