--- a/app/src/main/res/anim/blink.xml
+++ b/app/src/main/res/anim/blink.xml
@@ -3,7 +3,8 @@
 <alpha android:fromAlpha="1.0"
     android:toAlpha="0.0"
     android:interpolator = "@android:anim/accelerate_interpolator"
-    android:duration="3000"
+    android:duration="500"
     android:repeatMode="reverse"
-    android:repeatCount="infinite"></alpha>
+    android:repeatCount="infinite">
+</alpha>
 </set>
