seperate current patient from waiting list

--- a/app/src/main/res/layout/intelligent_room.xml
+++ b/app/src/main/res/layout/intelligent_room.xml
@@ -18,13 +18,27 @@
         android:text="测量室119室"
         android:background="@drawable/red_label"
         android:textAppearance="@android:style/TextAppearance.Material.Headline"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/intelligent_room_waiting_list"
-        android:layout_marginTop="@dimen/content_calling_number_margin_top"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        android:background="@drawable/red_waiting"/>
+        android:background="@drawable/red_waiting">
+        <include
+            android:id="@+id/intelligent_room_current_patient"
+            layout="@layout/patient_item">
+        </include>
+        <!--TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/intelligent_room_current_patient"/-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/intelligent_room_waiting_list"
+            android:layout_marginTop="@dimen/content_calling_number_margin_top"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
